add save/load/predict for model

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 /Include
 /Lib
 /Scripts
+/.vscode
 pyvenv.cfg
 /__pycache__
 /nltk_data
 t_preprocessing.out
-/train_data
-/train_data_modified
+/train_data*
 /FinancialPhraseBank-v1.0
+*.keras
